# solstarter

./: .gitignore  Cargo.toml  README.md
ido/: README.md
ido/cli/: Cargo.toml  README.md  user_accs.csv
ido/cli/src/: main.rs
ido/docs/: architecture.md  integration.md
ido/program/: Cargo.toml
ido/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  tests.rs
ido/program/src/utils/: invoke.rs  math.rs  mod.rs  program.rs  sdk.rs
staking/program/: Cargo.toml  README.md
staking/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  tests.rs
staking/program/src/utils/: borsh.rs  invoke.rs  math.rs  mod.rs  prelude.rs  program.rs  sdk.rs
