[package]
name = "sol-starter-cli"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
solana-account-decoder = "1.6.8"
solana-clap-utils = "1.6.8"
solana-cli-config = "1.6.8"
solana-client = "1.6.8"
solana-logger = "1.6.8"
solana-sdk = "1.6.8"
solana-program = "1.6.8"
borsh = "0.8.2"
regex = "1.5.4"
serde = "1.0.55"
csv = "1.1.6"
sol-starter-ido = { path="../program", features = [ "no-entrypoint" ] }
sol-starter-staking = { path="../../staking/program", features = [ "no-entrypoint" ] }
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }

[[bin]]
name = "sol-starter"
path = "src/main.rs"
