[package]
name = "sol-starter-ido"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.6.8"
thiserror = "1.0"
borsh = "0.8.2"
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
sol-starter-staking = { path = "../../staking/program", features = [ "no-entrypoint" ] }
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
solana-program-test = "1.6.8"
solana-sdk = "1.6.8"
tokio = { version = "1.3.0", features = ["macros"]}
bincode = "*"

[lib]
crate-type = ["cdylib", "lib"]